2011-04-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* parsing input, first version of communication protocol
	* reposition to current node
	* colors

