@@ -1,3 +1,9 @@
+2011-04-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* mouse button 1
+	* current/selected node drawing
+	* use of sequent window
+
 2011-04-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* parsing input, first version of communication protocol
